# ipoptdriver

./: MANIFEST.in  README.txt  setup.cfg  setup.py
docs/: conf.py  index.rst  pkgdocs.rst  srcdocs.rst  usage.rst
src/ipoptdriver/: ipoptdriver.py
src/ipoptdriver/test/: test_ipoptdriver.py
