[metadata]
name = ipoptdriver
version = 0.14
summary = Openmdao driver wrapper for the Ipopt optimization code
description-file = README.txt
keywords = openmdao
home-page = https://github.com/OpenMDAO-Plugins/ipoptdriver
download-url = 
author = Herb Schilling
author-email = hschilling@nasa.gov
maintainer = Herb Schilling
maintainer-email = hschilling@nasa.gov
license = Apache License, Version 2.0
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<3.0
requires-externals = Ipopt library from https://projects.coin-or.org/Ipopt and its Python wrapper, Pyipopt from http://code.google.com/p/pyipopt/
project-url = http://openmdao.org

[openmdao]
copyright = 
static_path = [ '_static' ]

